fix examples overview double border and border colors

--- a/packages/xy-shared/styles/globals.css
+++ b/packages/xy-shared/styles/globals.css
@@ -107,7 +107,7 @@
     --card: 0 0% 100%;
     --card-foreground: 222.2 47.4% 11.2%;
 
-    --border: 214.3 31.8% 91.4%;
+    --border: 214.3 31.8% 95%;
     --input: 214.3 31.8% 91.4%;
 
     --secondary: 0 100% 100%;
@@ -141,7 +141,7 @@
     --card: 0 0% 9%;
     --card-foreground: 0 0% 100%;
 
-    --border: 214.3 31.8% 22%;
+    --border: 214.3 0% 10%;
     --input: 214.3 31.8% 22%;
 
     --secondary: 217.2 32.6% 17.5%;
